# c_gtest_tutorial

./: .gitignore  README.md
include/: addition.h  division.h  multiplication.h  subtract.h
src/: CMakeLists.txt  addition.c  division.c  main.c  multiplication.c  subtract.c
tests/: AllTests.cpp  CMakeLists.txt  addTests.cpp  divTests.cpp  mulTests.cpp  subTests.cpp
